# AgentXEngine

./: .gitignore  AGENTS.md  README.md  SKILLS.md  docker-compose.yml
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: main.py
apps/backend/app/api/: chat.py  documents.py  health.py  router.py  workflows.py
apps/backend/app/core/: config.py  database.py  logging.py  middleware.py  rate_limit.py  redis.py
apps/backend/app/models/: document.py
apps/backend/app/repositories/: document.py
apps/backend/app/schemas/: chat.py  common.py
apps/backend/app/services/: agent.py  chat.py  rag.py  session.py  vertex_ai.py
apps/backend/app/workers/: celery_app.py
apps/backend/app/workers/tasks/: ingestion.py  memory.py
apps/backend/tests/: conftest.py  test_architecture.py  test_benchmarks.py  test_chunker.py  test_config.py  test_evaluation.py  test_executor.py  test_health.py  test_memory.py  test_new_tools.py  test_orchestrator.py  test_planner.py  test_reranker.py  test_resilience.py  test_retrieval_tool.py  test_runtime.py  test_terminal_tool.py  test_tools.py  test_tracer.py  test_vector_memory.py
apps/frontend/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: README.md
docs/adr/: 001-provider-layer-owns-retries.md  002-long-lived-runtime-objects.md  003-graceful-memory-degradation.md  README.md  (+2 more)
scripts/: bump_docs.py  deploy.sh  dev.sh  governance_check.py  setup.sh  test_genai.py  test_vertex.py
tests/: README.md
(+69 files in other folders)
